test/valid/56269_booleanSequence/booleanSequence.agu
-- Author: 56269, Frederico Prazeres

let main(_) : Unit -> Unit =
  print(false && true || true)