test/invalid-syntax/56269_wrong_variable/wrong_variable.agu
-- Author: 56269, Frederico Prazeres

-- Lexical Error

let %&dfa : Int = 5